--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
 <body>
     <iframe id="loader-frame" src="/components/loader.html" frameborder="0"></iframe>
-
     <main id="main-ss">
         <div class="particles" id="particles"></div>
         <header id="header-con">
+            <div id="loader">
+                <div id="progressBar"></div>
+            </div>
             <div class="left-container" data-aos="slide-right">
                 <div class="logo">
                     <img src="\assets\images\logo.png" alt="logo">
@@ -97,7 +99,7 @@
                     <h1>U-Design</h1>
                     <div class="subtitle">ยู-ดีไซน์</div>
                     <p>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?
-                        เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด ทั้งงานป้ายไวนิล 
+                        เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด ทั้งงานป้ายไวนิล
                         งานป้ายบิลบอร์ด แบนเนอร์
                         สติ๊กเกอร์และสื่อสิ่งพิมพ์ทุกชนิด<br>
                         เพราะเราเป็นมากกว่าป้ายโฆษณา
@@ -125,7 +127,7 @@
                 <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
             </div>
             <div id="product-item" class="product-item">
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
+                <!-- <a href="/service.html" class="product-item-con" data-aos="fade-up">
                     <div class="product-item-con-image">
                         <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
                             alt="product-item-1">
@@ -133,52 +135,7 @@
                     <div class="product-item-con-text">
                         <h3>ป้ายโฆษณา</h3>
                     </div>
-                </a>
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
-                    <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
-                            alt="product-item-1">
-                    </div>
-                    <div class="product-item-con-text">
-                        <h3>ป้ายโฆษณา</h3>
-                    </div>
-                </a>
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
-                    <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
-                            alt="product-item-1">
-                    </div>
-                    <div class="product-item-con-text">
-                        <h3>ป้ายโฆษณา</h3>
-                    </div>
-                </a>
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
-                    <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
-                            alt="product-item-1">
-                    </div>
-                    <div class="product-item-con-text">
-                        <h3>ป้ายโฆษณา</h3>
-                    </div>
-                </a>
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
-                    <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
-                            alt="product-item-1">
-                    </div>
-                    <div class="product-item-con-text">
-                        <h3>ป้ายโฆษณา</h3>
-                    </div>
-                </a>
-                <a href="/service.html" class="product-item-con" data-aos="fade-up">
-                    <div class="product-item-con-image">
-                        <img src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg"
-                            alt="product-item-1">
-                    </div>
-                    <div class="product-item-con-text">
-                        <h3>ป้ายโฆษณา</h3>
-                    </div>
-                </a>
+                </a> -->
             </div>
             <div class="button-product" data-aos="zoom-in">
                 <button onclick="window.location.href='/service.html'">ดูสินค้าทั้งหมด</button>
