เชื่อม backend ไอดอ

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="right-container" data-aos="slide-left">
                 <div class="search-con">
-                    <form action="">
+                    <form id="form-input" action="">
                         <input id="search-input" type="text" name="search" placeholder="ค้นหาสินค้า">
                         <button id="button-1" type="submit">
                             <img id="search" src="/assets/images/search-interface-symbol.png" alt="search-icon">
@@ -71,20 +71,7 @@
         </header>
         <section class="banner-section">
             <div class="banner-wrapper">
-                <div class="banner-content">
-                    <!-- <div class="banner-image"><img
-                            src="assets/images/491352709_1256717053123478_3007573521438405556_n.jpg" alt=""></div>
-                    <div class="banner-image"><img
-                            src="assets/images/491952769_1285203656941484_9153172249648220897_n.jpg" alt=""></div>
-                    <div class="banner-image"><img
-                            src="assets/images/492004574_1251746080287242_8926551003989382569_n.jpg" alt=""></div>
-                    <div class="banner-image"><img
-                            src="assets/images/495236393_1265238942271289_8009203848911221858_n.jpg" alt=""></div>
-                    <div class="banner-image"><img
-                            src="assets/images/500407055_1285581083570408_7088848512085273310_n (1).jpg" alt=""></div>
-                    <div class="banner-image"><img src="assets/images/Hitube_U9ZSz2g8xd_2025_06_10_16_24_58.jpg" alt="">
-                    </div> -->
-                </div>
+                <div class="banner-content"></div>
             </div>
             <div class="controls">
                 <div class="prev">&#10094;</div>
