--- a/about.html
+++ b/about.html
@@ -181,12 +181,11 @@
                     <img src="/assets/images/492004574_1251746080287242_8926551003989382569_n.jpg" alt="">
                 </div>
                 <div class="mchine-text-item">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae magnam mollitia veritatis
-                        fugit! Distinctio placeat ullam repellat sunt odit ab optio non, libero unde quos voluptate!
-                        Voluptas, corrupti ipsam? Corporis itaque ratione totam reiciendis quia quaerat sint maxime eius
-                        veniam voluptates eum cum quos architecto voluptate molestiae provident, laboriosam sunt
-                        reprehenderit excepturi enim. Numquam repellat nihil molestiae accusantium nesciunt sint eaque
-                        voluptatum! Qui minima vero est ullam ab quam voluptas.</p>
+                    <p>ที่ ยู-ดีไซน์ เราใช้ เทคโนโลยีล้ำสมัย เพื่อผลิตงานคุณภาพสูงทุกชิ้น พร้อม ส่งมอบตรงเวลา
+                        เพื่อสร้างความพึงพอใจให้กับลูกค้าอย่างมืออาชีพ
+                        เราเชื่อว่า งานทุกชิ้นไม่ใช่แค่ป้าย แต่เป็นสิ่งที่สะท้อนตัวตน แบรนด์ และความตั้งใจของลูกค้า
+                        ไม่ว่าจะเป็นการออกแบบสติ๊กเกอร์ติดรถ งานไวนิล หรือสื่อประชาสัมพันธ์อื่น ๆ
+                        เราใส่ใจทุกรายละเอียดตั้งแต่ขั้นตอนแรกจนถึงวันส่งมอบ</p>
                 </div>
             </div>
         </section>
