--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
             </section>
         </div>
         <section class="machine-showcase-5">
-            <h1 class="text-header" data-aos="fade-up">ประวัติการพัฒนา</h1>
+            <h1 class="text-header" data-aos="fade-up" style="font-size: 3.6rem;">ประวัติการพัฒนา</h1>
             <div class="machine-head">
                 <div class="machine">
                     <div class="machine-image" data-aos="fade-right">
@@ -112,12 +112,10 @@
                     </div>
                     <div class="machine-t-h">
                         <div class="machine-text">
-                            <h1>พ.ศ. 2553</h1>
+                            <h1>ค.ศ. 2015</h1>
                         </div>
                         <div class="title">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, beatae a similique
-                                nihil enim tenetur modi, aliquid maiores harum accusantium placeat incidunt soluta?
-                                Aliquid ex eligendi rem laudantium, deleniti est!</p>
+                            <p style="font-size: 1.8rem;">ยู-ดีไซน์ เมื่อปี2015ยู-ดีไซต์ยังเป็นร้านเล็กๆ</p>
                         </div>
                     </div>
                 </div>
@@ -126,16 +124,14 @@
         <section class="machine-showcase-5">
             <div class="machine-re">
                 <div class="machine-image" data-aos="fade-left">
-                    <img src="assets/images/u-design-old.png" alt="">
+                    <img src="assets/images/u-desing-old2.png" alt="">
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
-                        <h1>พ.ศ. 2555</h1>
+                        <h1>ค.ศ. 2025</h1>
                     </div>
                     <div class="title">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, beatae a similique nihil
-                            enim tenetur modi, aliquid maiores harum accusantium placeat incidunt soluta? Aliquid ex
-                            eligendi rem laudantium, deleniti est!</p>
+                        <p style="font-size: 1.8rem;">ยู-ดีไซน์ปี 2025 ได้ย้ายสถานที่ตั้งใหม่เเละใหญ่กว่าเดิม</p>
                     </div>
                 </div>
             </div>
@@ -144,16 +140,14 @@
         <section class="machine-showcase-5">
             <div class="machine">
                 <div class="machine-image" data-aos="fade-right">
-                    <img src="assets/images/u-design-old.png" alt="">
+                    <img src="assets/images/u-design-inside.png" alt="">
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
-                        <h1>พ.ศ. 2557</h1>
+                        <h1>ค.ศ. 2025</h1>
                     </div>
                     <div class="title">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, beatae a similique nihil
-                            enim tenetur modi, aliquid maiores harum accusantium placeat incidunt soluta? Aliquid ex
-                            eligendi rem laudantium, deleniti est!</p>
+                        <p style="font-size: 1.8rem;">ภายในร้านยู-ดีไซต์ปี2025</p>
                     </div>
                 </div>
             </div>
