--- a/about.html
+++ b/about.html
@@ -112,10 +112,10 @@
                     </div>
                     <div class="machine-t-h">
                         <div class="machine-text">
-                            <h1>ค.ศ. 2015</h1>
+                            <h1>พ.ศ. 2558</h1>
                         </div>
                         <div class="title">
-                            <p style="font-size: 1.8rem;">ยู-ดีไซน์ เมื่อปี2015ยู-ดีไซต์ยังเป็นร้านเล็กๆ</p>
+                            <p style="font-size: 1.8rem;">ยู-ดีไซน์ เมื่อปี2558</p>
                         </div>
                     </div>
                 </div>
@@ -128,10 +128,10 @@
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
-                        <h1>ค.ศ. 2025</h1>
+                        <h1>พ.ศ. 2568</h1>
                     </div>
                     <div class="title">
-                        <p style="font-size: 1.8rem;">ยู-ดีไซน์ปี 2025 ได้ย้ายสถานที่ตั้งใหม่เเละใหญ่กว่าเดิม</p>
+                        <p style="font-size: 1.8rem;">ยู-ดีไซน์ปี 2568 ได้ย้ายสถานที่ตั้งใหม่</p>
                     </div>
                 </div>
             </div>
@@ -144,10 +144,10 @@
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
-                        <h1>ค.ศ. 2025</h1>
+                        <h1>พ.ศ. 2568</h1>
                     </div>
                     <div class="title">
-                        <p style="font-size: 1.8rem;">ภายในร้านยู-ดีไซต์ปี2025</p>
+                        <p style="font-size: 1.8rem;">ภายในร้านยู-ดีไซต์ปี2568</p>
                     </div>
                 </div>
             </div>
