--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
                 ทุกชิ้นงานคือมาตรฐานมืออาชีพ</h1>
             <div class="machine-container-1" data-aos="fade-up">
                 <div class="machine-image-1">
-                    <img src="/assets/images/492004574_1251746080287242_8926551003989382569_n.jpg" alt="">
+                    <img src="/assets/images/XJ-1325-1030x843.png" alt="">
                 </div>
                 <div class="mchine-text-item">
                     <p>ที่ ยู-ดีไซน์ เราใช้ เทคโนโลยีล้ำสมัย เพื่อผลิตงานคุณภาพสูงทุกชิ้น พร้อม ส่งมอบตรงเวลา
@@ -243,7 +243,7 @@
                 </button>
             </div>
             <div class="credit-block">
-                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
+                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
             </div>
         </footer>
 </body>
