--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
         <section class="hero-section">
             <div class="hero-content">
                 <div class="hero-text" data-aos="fade-up" data-aos-duration="2000">
-                    <h1>U-Design</h1>
+                    <div class="img-logo">
+                        <img src="assets/images/logo.png" alt="">
+                    </div>
                     <div class="subtitle">ยู-ดีไซน์</div>
                     <p>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?
                         เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด ทั้งงานป้ายไวนิล
@@ -248,7 +250,7 @@
                 </button>
             </div>
             <div class="credit-block">
-                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
+                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
             </div>
         </footer>
     </main>
