--- a/service.html
+++ b/service.html
@@ -167,7 +167,7 @@
             </button>
         </div>
         <div class="credit-block">
-            <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
+            <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
         </div>
     </footer>
 </body>
