--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <section class="header-1">
 
             <div class="header-U-Design" data-aos="fade-up">
-                <h1>บริษัท ยู-ดีไซน์</h1>
+                <h1>ยู-ดีไซน์</h1>
             </div>
             <div class="about" data-aos="fade-up">
                 <p>ยู-ดีไซน์ ให้บริการออกแบบและผลิตสื่อโฆษณาทุกชนิดครบวงจร</p>
