--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
                 </button>
             </div>
             <div class="credit-block">
-                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
+                <span>Ⓒ 2025 บริษัท เเอทไซน์ มีเดีย พลัส จำกัด</span>
             </div>
         </footer>
 </body>
