--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
             </button>
         </div>
         <div class="credit-block">
-            <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
+            <span>Ⓒ 2025 บริษัท เเอทไซน์ มีเดีย พลัส จำกัด</span>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
