--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </button>
             </div>
             <div class="credit-block">
-                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส จำกัด</span>
+                <span>Ⓒ 2025 บริษัท เเอทไซน์ มีเดีย พลัส จำกัด</span>
             </div>
         </footer>
     </main>
